@@ -8,6 +8,7 @@ Post badge not replacing %%post_url%% correctly  - FIXED
 Required message not editable until custom field saved - FIXED
 Validation pattern extended to phone,email and url type fields - ADDED
 Avada theme not using GD titles - FIXED
+Recently viewed widget not checking for deleted post IDs - FIXED
 
 v2.0.0.49
 Front end author actions - After delete, page is 404 - FIXED
